<resources>
    <string name="app_name">wish-it</string>

    <!-- 데이터 입력 안내 -->
    <string name="info_tv1">잠깐!</string>
    <string name="info_tv2">당신의 정보가 필요합니다</string>
    <string name="info_tv3">앱 실행을 위해 당신에\n대한 몇가지 정보가 필요합니다.</string>
    <string name="info_btnNext">알겠습니다</string>

    <!-- 1번 데이터 입력 -->
    <string name="data1_tv1">1/3</string>
    <string name="data1_tv2">정보를 입력해주세요 :)</string>

    <string name="data_btnNext">다음으로</string>
    <string-array name="payday_array">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item>
        <item>6</item><item>7</item><item>8</item><item>9</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item>
        <item>26</item><item>27</item><item>28</item><item>29</item><item>30</item><item>31</item>
    </string-array>
</resources>
