<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_tv1"
        android:textSize="30dp"
        android:fontFamily="@font/hansansbold"
        android:textColor="@color/t_orange"
        android:layout_centerHorizontal="true" />
    
    <View
        android:id="@+id/uline"
        android:layout_width="55dp"
        android:layout_height="4dp"
        android:background="@color/orange"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-25dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_tv2"
        android:textSize="30dp"
        android:fontFamily="@font/hansansregular"
        android:textColor="@color/t_black"
        android:layout_below="@+id/uline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_tv3"
            android:textSize="22dp"
            android:fontFamily="@font/hansanslight"
            android:textColor="@color/t_black"
            android:layout_below="@+id/uline"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:lineSpacingExtra="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/info_btnNext"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/hansansbold"
        android:textColor="@color/t_white"
        android:textSize="17dp"
        android:background="@drawable/radius_button"/>

</RelativeLayout>