<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data1_tv1"
        android:textSize="30dp"
        android:fontFamily="@font/hansansbold"
        android:textColor="@color/t_orange"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/uline"
        android:layout_width="55dp"
        android:layout_height="4dp"
        android:background="@color/orange"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-25dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data1_tv2"
        android:textSize="30dp"
        android:fontFamily="@font/hansansregular"
        android:textColor="@color/t_black"
        android:layout_below="@+id/uline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp" />
    <!--______________________________________________________________________-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hansanslight"
                android:text="나는  "
                android:textColor="@color/t_black"
                android:textSize="30dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_payday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hansansregular"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    android:hint="10"
                    android:textColorHint="@color/t_lightgray"
                    android:textColor="@color/t_orange"
                    android:background="@null"
                    android:inputType="number"
                    android:maxLength="2" />

                <View
                    android:id="@+id/uline_payday"
                    android:layout_width="35dp"
                    android:layout_height="2dp"
                    android:background="@color/t_lightgray"
                    android:layout_below="@id/edt_payday"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-25dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hansanslight"
                android:text=" 일에"
                android:textColor="@color/t_black"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll2"
            android:orientation="horizontal"
            android:layout_marginTop="-30dp"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hansansregular"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    android:hint="1,000,000"
                    android:textColorHint="@color/t_lightgray"
                    android:textColor="@color/t_orange"
                    android:background="@null"
                    android:inputType="number"
                    android:maxLength="10" />

                <View
                    android:id="@+id/uline_salary"
                    android:layout_width="150dp"
                    android:layout_height="2dp"
                    android:background="@color/t_lightgray"
                    android:layout_below="@id/edt_salary"
                    android:layout_marginTop="-25dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hansanslight"
                android:text=" 원 받는다."
                android:textColor="@color/t_black"
                android:textSize="30dp" />

        </LinearLayout>
    </LinearLayout>
    <!--______________________________________________________________________-->

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/data_btnNext"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/hansansbold"
        android:textColor="@color/t_white"
        android:textSize="17dp"
        android:background="@drawable/radius_button" />

</RelativeLayout>